Adding swipe limit to the swipe behavior Still need to add the desired text and on click listener to be implemented in the instantiating class

--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="purple">#FC1169</color>
     <color name="text">#ABBEDD</color>
     <color name="blue">#379AEA</color>
+    <color name="red">#FF0000</color>
     <color name="seablue">#20BAE4</color>
     <color name="strongblue">#1988A4</color>
     <color name="fabblue">#53A8FC</color>
