--- a/splitemapp-android/res/layout/list_item_project.xml
+++ b/splitemapp-android/res/layout/list_item_project.xml
@@ -1,70 +1,116 @@
-<!-- A CardView that contains a RelativeLayout -->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="0dp" >
+    android:id="@+id/h_swipeLayout" >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    <!-- A LinearLayout containing the bottom view with actions -->
+    <LinearLayout
+        android:id="@+id/h_bottomView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/grey"
+        android:layout_gravity="end"
+        android:gravity="end"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/h_project_cover_imageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+        <TextView
+            android:id="@+id/h_action_edit_textView"
+            android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="5dp"
+			android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:contentDescription="@string/h_project_cover_description"
-            android:src="@drawable/category_placeholder" />
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:drawableTop="@drawable/ic_edit_grey"
+            android:text="@string/h_action_edit"
+            android:textColor="@color/hard_grey" />
 
         <TextView
-            android:id="@+id/h_project_title"
+            android:id="@+id/h_action_remove_textView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/h_project_cover_imageView"
-            android:layout_toRightOf="@id/h_project_cover_imageView"
-            android:text="@string/h_project_title"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-        
-        <TextView
-            android:id="@+id/h_project_total_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/h_project_title"
-            android:layout_toEndOf="@id/h_project_cover_imageView"
-            android:layout_toRightOf="@id/h_project_cover_imageView"
-            android:text="@string/h_project_total"
-            android:textColor="@color/grey"
-            android:textSize="12sp" />
-        
-        <TextView
-            android:id="@+id/h_project_total_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/h_project_title"
-            android:layout_toEndOf="@id/h_project_total_label"
-            android:layout_toRightOf="@id/h_project_total_label"
-            android:text="@string/h_project_total_value"
-            android:textColor="@color/grey"
-            android:textSize="12sp" />
+			android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+			android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:drawableTop="@drawable/ic_remove_circle_grey"
+            android:text="@string/h_action_remove"
+            android:textColor="@color/hard_grey" />
+    </LinearLayout>
 
-        <View
+    <!-- A CardView containing the surface view -->
+
+    <android.support.v7.widget.CardView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0dp" >
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@id/h_project_cover_imageView"
-            android:layout_toRightOf="@id/h_project_cover_imageView"
-            android:background="@color/grey" />
-    </RelativeLayout>
+            android:layout_height="wrap_content" >
 
-</android.support.v7.widget.CardView>
+            <ImageView
+                android:id="@+id/h_project_cover_imageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:contentDescription="@string/h_project_cover_description"
+                android:src="@drawable/category_placeholder" />
+
+            <TextView
+                android:id="@+id/h_project_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@id/h_project_cover_imageView"
+                android:layout_toRightOf="@id/h_project_cover_imageView"
+                android:text="@string/h_project_title"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/h_project_total_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/h_project_title"
+                android:layout_toEndOf="@id/h_project_cover_imageView"
+                android:layout_toRightOf="@id/h_project_cover_imageView"
+                android:text="@string/h_project_total"
+                android:textColor="@color/grey"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/h_project_total_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/h_project_title"
+                android:layout_toEndOf="@id/h_project_total_label"
+                android:layout_toRightOf="@id/h_project_total_label"
+                android:text="@string/h_project_total_value"
+                android:textColor="@color/grey"
+                android:textSize="12sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@id/h_project_cover_imageView"
+                android:layout_toRightOf="@id/h_project_cover_imageView"
+                android:background="@color/grey" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+</com.daimajia.swipe.SwipeLayout>
