--- a/splitemapp-android/res/layout/list_item_project.xml
+++ b/splitemapp-android/res/layout/list_item_project.xml
@@ -1,45 +1,40 @@
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/h_swipeLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/h_swipeLayout" >
+    android:layout_height="wrap_content" >
 
     <!-- A LinearLayout containing the bottom view with actions -->
+
     <LinearLayout
         android:id="@+id/h_bottomView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/grey"
         android:layout_gravity="end"
-        android:gravity="end"
+        android:background="@color/grey"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/h_action_edit_textView"
+        <ImageView
+            android:id="@+id/h_action_edit_imageView"
             android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="5dp"
-			android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:drawableTop="@drawable/ic_edit_grey"
-            android:text="@string/h_action_edit"
-            android:textColor="@color/hard_grey" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/h_action_edit"
+            android:src="@drawable/ic_edit_grey_24dp" />
 
-        <TextView
-            android:id="@+id/h_action_remove_textView"
+        <ImageView
+            android:id="@+id/h_action_archive_imageView"
             android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-			android:layout_marginBottom="5dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginStart="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp"
-            android:drawableTop="@drawable/ic_remove_circle_grey"
-            android:text="@string/h_action_remove"
-            android:textColor="@color/hard_grey" />
+            android:contentDescription="@string/h_action_archive"
+            android:src="@drawable/ic_archive_grey_24dp" />
     </LinearLayout>
 
     <!-- A CardView containing the surface view -->
