Implementing remove feature in the project list Moving the logic that gets existing active projects for the current user to the swipe adapter

--- a/splitemapp-android/res/layout/fragment_create_list.xml
+++ b/splitemapp-android/res/layout/fragment_create_list.xml
@@ -41,6 +41,7 @@
             android:drawableLeft="@drawable/dollar_sign"
             android:drawablePadding="5dp"
             android:drawableStart="@drawable/dollar_sign"
+            android:text="@string/cl_list_budget_value"
             android:inputType="numberDecimal" />
 
         <View
