--- a/splitemapp-android/res/layout/list_item_user.xml
+++ b/splitemapp-android/res/layout/list_item_user.xml
@@ -6,13 +6,13 @@
     android:orientation="horizontal" >
 
     <ImageView
-        android:id="@+id/cl_user_avatar"
+        android:id="@+id/cp_user_avatar"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/cl_user_avatar_description"
+        android:contentDescription="@string/cp_user_avatar_description"
         android:paddingEnd="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -20,7 +20,7 @@
         android:src="@drawable/avatar_placeholder" />
 
     <TextView
-        android:id="@+id/cl_user_name"
+        android:id="@+id/cp_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="5dp"
@@ -29,15 +29,15 @@
         android:paddingEnd="0dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:layout_toEndOf="@id/cl_user_avatar"
-        android:layout_toRightOf="@id/cl_user_avatar"
+        android:layout_toEndOf="@id/cp_user_avatar"
+        android:layout_toRightOf="@id/cp_user_avatar"
         android:gravity="center_vertical"
-        android:text="User Name"
+        android:text="@string/cp_user_name_placeholder"
         android:textColor="@color/black"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/cl_user_email"
+        android:id="@+id/cp_user_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="5dp"
@@ -45,10 +45,10 @@
         android:paddingRight="0dp"
         android:paddingEnd="0dp"
         android:paddingBottom="5dp"
-        android:layout_below="@id/cl_user_name"
-        android:layout_toEndOf="@id/cl_user_avatar"
-        android:layout_toRightOf="@id/cl_user_avatar"
-        android:text="sample@splitemapp.com"
+        android:layout_below="@id/cp_user_name"
+        android:layout_toEndOf="@id/cp_user_avatar"
+        android:layout_toRightOf="@id/cp_user_avatar"
+        android:text="@string/cp_user_email_placeholder"
         android:textColor="@color/grey"
         android:textSize="12sp" />
 
@@ -59,9 +59,9 @@
         android:paddingLeft="5dp"
         android:paddingRight="0dp"
         android:paddingEnd="0dp"
-        android:layout_below="@id/cl_user_email"
-        android:layout_toEndOf="@id/cl_user_avatar"
-        android:layout_toRightOf="@id/cl_user_avatar"
+        android:layout_below="@id/cp_user_email"
+        android:layout_toEndOf="@id/cp_user_avatar"
+        android:layout_toRightOf="@id/cp_user_avatar"
         android:background="@color/grey" />
 
 </RelativeLayout>
