Updating home screen drawer to have the desired format.

--- a/splitemapp-android/res/layout/line_separator.xml
+++ b/splitemapp-android/res/layout/line_separator.xml
@@ -1,19 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/NoActionBarTheme"
+<View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal" >
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0.5dp"
-        android:layout_weight="0.05"
-        android:background="@color/white" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0.5dp"
-        android:layout_weight="0.95"
-        android:background="@color/text" />
-</LinearLayout>
+    android:layout_height="0.5dp"
+    android:background="@color/grey" />
