--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -1,19 +1,17 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true" >
+    android:layout_height="match_parent" >
+
+    <!-- The main content view -->
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        style="@style/NoActionBarTheme"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
         <RelativeLayout
             android:id="@+id/h_topLayout"
-            style="@style/NoActionBarTheme"
             android:layout_width="match_parent"
             android:layout_height="@dimen/home_image_height"
             android:layout_alignParentTop="true"
@@ -37,15 +35,96 @@
             app:pressedTranslationZ="12dp" />
     </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/h_navigationView"
-        android:layout_width="wrap_content"
+    <!-- The navigation drawer -->
+
+    <RelativeLayout
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/white"
-        app:elevation="6dp"
-        app:itemTextColor="@color/hard_grey"
-        app:headerLayout="@layout/drawer_header_home"
-        app:menu="@menu/drawer_home" />
+        android:background="@color/grey"
+        android:layout_gravity="start" >
+
+        <ImageView
+            android:id="@+id/h_avatar_imageView"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
+            android:contentDescription="@string/h_avatar_description"
+            android:src="@drawable/avatar_placeholder" />
+
+        <TextView
+            android:id="@+id/h_full_name_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/h_avatar_imageView"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:text="@string/h_name"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/h_email_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/h_full_name_textView"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:text="@string/h_email"
+            android:textColor="@color/hard_grey"
+            android:textSize="12sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/h_email_textView"
+            android:background="@color/white"
+            android:gravity="bottom"
+            android:orientation="vertical" >
+
+            <include layout="@layout/line_separator" />
+
+            <TextView
+                android:id="@+id/h_logout_textView"
+                style="DrawerOption"
+                android:drawableLeft="@drawable/ic_logout_grey_24dp"
+                android:drawableStart="@drawable/ic_logout_grey_24dp"
+                android:text="@string/h_logout" />
+
+            <include layout="@layout/line_separator" />
+
+            <TextView
+                android:id="@+id/h_manage_contacts_textView"
+                style="DrawerOption"
+                android:drawableLeft="@drawable/ic_manage_contacts_grey_24dp"
+                android:drawableStart="@drawable/ic_manage_contacts_grey_24dp"
+                android:text="@string/h_manage_contacts" />
+
+            <include layout="@layout/line_separator" />
+
+            <TextView
+                android:id="@+id/h_synchronize_textView"
+                style="DrawerOption"
+                android:drawableLeft="@drawable/ic_synchronize_grey_24dp"
+                android:drawableStart="@drawable/ic_synchronize_grey_24dp"
+                android:text="@string/h_synchronize" />
+
+            <include layout="@layout/line_separator" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="25dp" />
+        </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v4.widget.DrawerLayout>
