--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -56,6 +56,16 @@
         <item name="android:paddingLeft">5dp</item>
         <item name="android:background">@drawable/spinner_background</item>
     </style>
+    
+    <style name="DrawerOption">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:gravity">center_vertical|start</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textColor">@color/hard_grey</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <style name="Button" parent="Theme.AppCompat">
         <item name="android:layout_width">wrap_content</item>
