--- a/splitemapp-android/res/layout/fragment_manage_contacts.xml
+++ b/splitemapp-android/res/layout/fragment_manage_contacts.xml
@@ -2,7 +2,8 @@
     style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/white" >
 
     <include layout="@layout/action_bar" />
 
@@ -21,8 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/mc_synchronize_contacts_button"
-            android:layout_below="@id/mc_contacts_textView"
-            android:background="@color/white" >
+            android:layout_below="@id/mc_contacts_textView" >
         </ListView>
 
         <Button
