--- a/splitemapp-android/res/layout/fragment_add_people.xml
+++ b/splitemapp-android/res/layout/fragment_add_people.xml
@@ -2,7 +2,8 @@
     style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/white" >
     
     <include layout="@layout/action_bar"/>
     
