--- a/splitemapp-android/res/layout/fragment_welcome.xml
+++ b/splitemapp-android/res/layout/fragment_welcome.xml
@@ -26,7 +26,8 @@
         android:id="@+id/w_viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.6" >
+        android:layout_weight="0.6"
+        android:background="@color/white" >
 
     </android.support.v4.view.ViewPager>
 
