Replacing bottom line for a rectangle view with a blue background below every place needed

--- a/splitemapp-android/res/layout/fragment_create_account.xml
+++ b/splitemapp-android/res/layout/fragment_create_account.xml
@@ -14,6 +14,8 @@
         android:id="@+id/ca_username_editText"
         style="@style/CustomEditText"
         android:inputType="textPersonName" />
+    
+    <View style="@style/BottomLine" />
 
     <TextView
         style="@style/CustomTextView"
@@ -23,6 +25,8 @@
         android:id="@+id/ca_email_editText"
         style="@style/CustomEditText"
         android:inputType="textEmailAddress" />
+    
+    <View style="@style/BottomLine" />
 
     <TextView
         style="@style/CustomTextView"
@@ -32,6 +36,8 @@
         android:id="@+id/ca_password_editText"
         style="@style/CustomEditText"
         android:inputType="textPassword" />
+    
+    <View style="@style/BottomLine" />
 
     <Button
         android:id="@+id/create_account_create_account_button"
