--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -33,7 +33,15 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/edittext_background</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="BottomLine" parent="Theme.AppCompat">
+    	<item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:background">@color/seablue</item>
     </style>
 
     <style name="CustomTextView" parent="Theme.AppCompat">
@@ -53,6 +61,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">35dp</item>
         <item name="android:paddingLeft">5dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
         <item name="android:background">@drawable/spinner_background</item>
     </style>
 
