--- a/splitemapp-android/res/layout/list_item_contact.xml
+++ b/splitemapp-android/res/layout/list_item_contact.xml
@@ -1,11 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Theme.AppCompat"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="@color/white"
+    android:id="@+id/ap_parentView" >
     
     <TextView
-        android:id="@+id/ap_user_full_name"
+        android:id="@+id/pc_user_full_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
@@ -13,6 +15,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:textColor="@color/black"
+        android:text="@string/pc_contact_fullname_placeholder"
         android:textSize="22sp"/>
     
     <ImageView
@@ -23,7 +26,8 @@
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp"
         android:layout_alignParentEnd="true"
-        android:id="@+id/ap_user_status_icon" 
-        android:contentDescription="@string/ap_status_description"/>
+        android:src="@drawable/contact_status_inactive"
+        android:id="@+id/pc_user_status_icon" 
+        android:contentDescription="@string/pc_status_description"/>
 
 </RelativeLayout>
