--- a/splitemapp-android/res/layout/list_item_user_expense_list.xml
+++ b/splitemapp-android/res/layout/list_item_user_expense_list.xml
@@ -11,55 +11,67 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/ue_fullName_textView"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/ue_nameRow"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:background="@color/grey"
-            android:padding="10dp"
-            android:text="@string/ue_fullName_placeholder"
-            android:textColor="@color/hard_grey" />
+            android:layout_alignParentTop="true" >
 
-        <TextView
-            android:id="@+id/ue_fullAmount_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:background="@color/grey"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="10dp"
-            android:paddingRight="10dp"
-            android:paddingStart="0dp"
-            android:paddingLeft="0dp"
-            android:text="@string/ue_fullAmount_placeholder"
-            android:textColor="@color/hard_grey" />
+            <TextView
+                android:id="@+id/ue_fullName_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:padding="10dp"
+                android:text="@string/ue_fullName_placeholder"
+                android:textColor="@color/hard_grey" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/ue_fullName_textView"
-            android:layout_toLeftOf="@id/ue_fullAmount_textView"
-            android:layout_toRightOf="@id/ue_fullName_textView"
-            android:layout_toStartOf="@id/ue_fullAmount_textView"
-            android:background="@color/grey"
-            android:gravity="end"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:text="@string/ue_currency"
-            android:textColor="@color/hard_grey" />
+            <ImageView
+                android:id="@+id/ue_arrow_imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/ue_fullName_textView"
+                android:layout_toRightOf="@id/ue_fullName_textView"
+                android:contentDescription="@string/p_arrow_description"
+                android:src="@drawable/ic_arrow_grey_48dp" />
+
+            <TextView
+                android:id="@+id/ue_fullAmount_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="0dp"
+                android:paddingRight="10dp"
+                android:paddingStart="0dp"
+                android:paddingTop="10dp"
+                android:text="@string/ue_fullAmount_placeholder"
+                android:textColor="@color/hard_grey" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/ue_arrow_imageView"
+                android:layout_toLeftOf="@id/ue_fullAmount_textView"
+                android:layout_toRightOf="@id/ue_arrow_imageView"
+                android:layout_toStartOf="@id/ue_fullAmount_textView"
+                android:gravity="end"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:text="@string/ue_currency"
+                android:textColor="@color/hard_grey" />
+        </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/ue_user_expense_list_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ue_fullName_textView"/>
+            android:layout_below="@id/ue_nameRow" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
