Renaming action bar to blue toolbar Creating new transparent toolbar Adding new transparent toolbar to the project screen Adding new required images

--- a/splitemapp-android/res/layout/fragment_create_project.xml
+++ b/splitemapp-android/res/layout/fragment_create_project.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
-        <include layout="@layout/action_bar" />
+        <include layout="@layout/blue_toolbar" />
 
         <TextView
             style="@style/CustomTextView"
