--- a/splitemapp-android/res/layout/fragment_manage_contacts.xml
+++ b/splitemapp-android/res/layout/fragment_manage_contacts.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="@color/white" >
 
-    <include layout="@layout/action_bar" />
+    <include layout="@layout/blue_toolbar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
