--- a/splitemapp-android/res/layout/fragment_project_contacts.xml
+++ b/splitemapp-android/res/layout/fragment_project_contacts.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="@color/white" >
     
-    <include layout="@layout/action_bar"/>
+    <include layout="@layout/blue_toolbar"/>
     
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pc_contacts_recyclerView"
