--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -17,6 +17,38 @@
             android:layout_height="@dimen/home_image_height"
             android:layout_alignParentTop="true"
             android:background="@drawable/home_background" >
+
+            <ImageView
+                android:id="@+id/h_main_avatar_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_alignParentTop="true"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="25dp"
+                android:contentDescription="@string/h_avatar_description"
+                android:src="@drawable/avatar_placeholder" />
+
+            <TextView
+                android:id="@+id/h_main_full_name_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/h_main_avatar_imageView"
+                android:gravity="center_horizontal"
+                android:text="@string/h_name"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/h_main_email_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/h_main_full_name_textView"
+                android:layout_marginBottom="15dp"
+                android:gravity="center_horizontal"
+                android:text="@string/h_email"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
         </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
@@ -30,10 +62,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/h_topLayout"
+            android:layout_marginTop="50dp"
             android:drawableTop="@drawable/ic_list_add_grey_48dp"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
-            android:layout_marginTop="50dp"
             android:text="@string/h_empty_list_hint"
             android:textColor="@color/hard_grey"
             android:textSize="16sp" />
@@ -58,7 +90,7 @@
         android:background="@color/grey" >
 
         <ImageView
-            android:id="@+id/h_avatar_imageView"
+            android:id="@+id/h_nav_avatar_imageView"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentLeft="true"
@@ -71,12 +103,12 @@
             android:src="@drawable/avatar_placeholder" />
 
         <TextView
-            android:id="@+id/h_full_name_textView"
+            android:id="@+id/h_nav_full_name_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/h_avatar_imageView"
+            android:layout_below="@id/h_nav_avatar_imageView"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp"
             android:text="@string/h_name"
@@ -84,12 +116,12 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/h_email_textView"
+            android:id="@+id/h_nav_email_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/h_full_name_textView"
+            android:layout_below="@id/h_nav_full_name_textView"
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp"
@@ -101,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_below="@id/h_email_textView"
+            android:layout_below="@id/h_nav_email_textView"
             android:background="@color/white"
             android:gravity="bottom"
             android:orientation="vertical" >
