--- a/splitemapp-android/res/layout/blue_toolbar.xml
+++ b/splitemapp-android/res/layout/blue_toolbar.xml
@@ -1,58 +1,46 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/actionBar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="45dp"
+    app:layout_collapseMode="pin"
+    android:background="@color/seablue"
+    app:contentInsetStart="0dp" >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/actionBar"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/seablue"
-        android:layout_marginTop="-5dp"
-        android:layout_marginBottom="-5dp"
-        app:contentInsetStart="0dp" >
+        android:paddingEnd="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingStart="10dp" >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/cancel_action"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:background="@color/seablue"
-            android:paddingLeft="10dp"
-            android:paddingStart="10dp"
-            android:paddingRight="10dp"
-            android:paddingEnd="10dp" >
+            android:drawableLeft="@drawable/back_button"
+            android:drawablePadding="20dp"
+            android:drawableStart="@drawable/back_button"
+            android:gravity="start"
+            android:text="@string/ab_title"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/cancel_action"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:drawableLeft="@drawable/back_button"
-                android:drawablePadding="20dp"
-                android:drawableStart="@drawable/back_button"
-                android:gravity="start"
-                android:text="@string/ab_title"
-                android:textColor="@color/white"
-                android:background="@color/seablue"
-                android:textSize="18sp" />
+        <TextView
+            android:id="@+id/done_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/seablue"
+            android:text="@string/ab_done"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/done_action"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:text="@string/ab_done"
-                android:textColor="@color/white"
-                android:background="@color/seablue"
-                android:textSize="18sp" />
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@drawable/toolbar_dropshadow" />
-
-</LinearLayout>
+</android.support.v7.widget.Toolbar>
